# fitanimate

./: README.md  data.py  data.py~  fa  fitanimate.py  plot.py  setup.cfg
fitanimate/: __init__.py  animator.py  data.py  fitanimate.py  plot.py
