[metadata]
name = fitanimate
version = 0.1
author = Nick Hastings
author_email = nicholaschastings@gmail.com
description = Fit Animate
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_file = LICENSE 
url = https://github.com/NickHastings/fitanimate
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    fa = fitanimate.fitanimate:main

